[package]
name = "ast4"
version = "0.1.17"
edition = "2021"
build = "build.rs"
authors = ["jmonasterio"]
description = "Asteroids arcade game clone"

[build-dependencies]
built = {version="0.5", features=["git2","chrono", "semver"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See: https://bevy-cheatbook.github.io/features/file-formats.html
[dependencies]
bevy_prototype_lyon = "0.4.0"
bevy = { version = "0.6.0", features = ["wav"] }  
#"dynamic" <-- breaks lldb
#heron = { version = "1.0.1-rc.1", features = ["2d"] }
bevy_render="0.6.0"
bevy_window="0.6.0"
bevy_winit="0.6.0"
fastrand="1.6.0"
js-sys="0.3.56"
instant="0.1"

quadtree_rs="0.1.2"

[dependencies.bevy_kira_audio]
version = "0.8.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
  "wav",
 
]

# Dependencies for WASM only.
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#bevy = { version = "0.6", default-features = false, features = ["bevy_gltf", "bevy_winit", "render", "png"] }
#bevy_webgl2 = "0.5.2"
#getrandom = { version="0.2", features=["wasm-bindgen"] }


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


# See: https://bevy-cheatbook.github.io/pitfalls/performance.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
